--- a/contents/天干地支关系.md
+++ b/contents/天干地支关系.md
@@ -1,26 +1,100 @@
-# 克
-![地支-克.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E5%85%8B.png)
+# 干支关系概览表
+![干支生克.png](..%2Fpictures%2F%E5%B9%B2%E6%94%AF%E7%94%9F%E5%85%8B.png)
 
-# 刑
-![地支-刑.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E5%88%91.png)
+# 地支相克（对角）
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
 
-# 害（穿）
-![地支-害（穿）.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E5%AE%B3%EF%BC%88%E7%A9%BF%EF%BC%89.png)
+> ### 子午、巳亥、辰戌、卯酉、寅申、丑未
 
-# 破
-![地支-破.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E7%A0%B4.png)
+# 地支相刑
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
+> **子 卯**：无礼之刑  
+> **寅 巳 申**：无恩之刑  
+> **未 丑 戌**：恃势之刑  
+> **辰 午 酉亥**：自刑  
+> 
 
-# 六合
-![地支-六合.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E5%85%AD%E5%90%88.png)
+# 地支相<害 / 穿>（面对面）
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
+> ### 卯辰、寅巳、丑午、子未、亥申、戌酉
 
-# 三合
-![地支-三合.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF-%E4%B8%89%E5%90%88.png)
-![三合局忌.png](..%2Fpictures%2F%E4%B8%89%E5%90%88%E5%B1%80%E5%BF%8C.png)
-# 半合
-![地支和化.png](..%2Fpictures%2F%E5%9C%B0%E6%94%AF%E5%92%8C%E5%8C%96.png)
+# 地支相破
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
+> ### 子酉、丑辰、寅亥、午卯、未戌、巳申
+
+# 地支六合
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
+> **午未**：生合 化土  
+> **巳申**：克合 化水  
+> **辰酉**：生合 化金  
+> **卯戌**：克合 化火  
+> **寅亥**：生合 化木  
+> **子丑**：克合 化土  
+> 
+
+# 地支三合
+| **巳**  |  **午**  |  **未**  |  **申**  |
+|:------:|:-------:|:-------:|:-------:|
+| **辰**  |         |         |  **酉**  |
+| **卯**  |         |         |  **戌**  |
+| **寅**  |  **丑**  |  **子**  |  **亥**  |
+> **申 子 辰** 三合水局  
+> **亥 卯 未** 三合木局  
+> **寅 午 戌** 三合火局  
+> **巳 酉 丑** 三合金局  
+
+> ### 三合局忌冲，冲则破
+> **例如**：  
+> 亥卯未三合木局，出现巳酉丑而又与所冲之神紧贴，为破局了。  
+> 谁破谁呢，举个例子，酉字破卯则或巳字破亥，三合局不成，半合局没事。  
+> **强调**：三合局中的中神最重要若逢大运来冲克中神，则坏三合局，半合局。
+> 
+
+# 地支半合
+> **生地半合局**:`亥卯`半合木局，`寅午`半合火局，`巳酉`半合金局，`申子`半合水局  
+> **墓地半合局**:`卯未`半合木局，`午戌`半合火局，`酉丑`半合金局，`子辰`半合水局  
+> **拱局**:`亥未`拱木局，`寅戌`拱火局，`巳丑`拱金局，`申辰`拱水局  
+> **暗合**:`寅丑`暗合，`午亥`暗合，`卯申`暗合
 
 # 天干五合
-![天干-五合.png](..%2Fpictures%2F%E5%A4%A9%E5%B9%B2-%E4%BA%94%E5%90%88.png)
+| **丁** | **戊** | **己** | **庚** |
+|:-----:|:-----:|:-----:|:-----:|
+| **丙** |       |       | **辛** |
+| **乙** |       |       | **壬** |
+| **甲** |       |       | **癸** |
 
-# 和化条件
-![天干地支和化条件.png](..%2Fpictures%2F%E5%A4%A9%E5%B9%B2%E5%9C%B0%E6%94%AF%E5%92%8C%E5%8C%96%E6%9D%A1%E4%BB%B6.png)
+> **甲己**：合 化土  
+> **乙庚**：合 化金  
+> **丙辛**：合 化水  
+> **丁壬**：合 化木  
+> **戊癸**：合 化火  
+
+# 合化条件
+> *天干和化条件*
+>> **1、要有化神**: 天干必须有化神  
+>> **2、邻干作合**: 天干必须相邻才能合，邻干作合也需要注意搭配的顺序和方式，不能随意搭配  
+>> **3、必有强根**: 两个干之间，必须有一个干坐支，属于两个干合化后的五行强根  
+>> **4、月支引化**: 天干有合，又见月支主气或余气与化神同气  
+> 
+> *地支和化条件*
+>> **相邻、得令、天干要有化神**
