--- a/contents/易经笔记.MD
+++ b/contents/易经笔记.MD
@@ -66,7 +66,44 @@
 > `申`里**庚壬戊**，`酉`中独**辛**金。  
 > `戌`里**戊辛丁**，`亥`中**壬甲**藏。
 >
+
 ## 5. 十神
+|           |    异性     |    同性     |
+|:---------:|:---------:|:---------:|
+|   (助)同我   |  **劫财**   |  **比肩**   |
+|   (泄)我生   |  **伤官**   |  **食神**   |
+|   (耗)我克   | **正财(才)** | **偏财(财)** |
+|   (抑)克我   | **正官(官)** |  **七杀**   |
+|   (扶)生我   | **正印(印)** | **偏印(枭)** |
+
+- **应用**  
+> - 官印相生  
+> - 食神制杀  
+> - 食神泄秀  
+> 
+
+- **生克**  
+> **劫伤才官印，比食财杀枭。**  
+> - 十神相生：正偏财生官杀，官杀生印枭，印枭生日主比劫，比劫生食伤，食伤生正偏财。  
+> - 十神相克：正偏财克印枭，印枭克食伤，食伤克官杀，官杀克日主比劫，比劫克正偏财。  
+> - 同性生克力大，异性生克力小。劫伤财官印，比食才杀枭。  
+> 
+
+- **性格**
+>  
+> |          |        正        |         反         |
+> |:--------:|:---------------:|:-----------------:|  
+> |  **正官**  | 正直负责，端庄严肃，循规蹈矩  | 易流于刻板，墨守成规，反为意志不坚 |  
+> |  **偏官**  | 豪爽侠义，积极进取，威严机敏  | 易流于偏激，叛逆霸道，反为堕落极端 |  
+> |  **正印**  | 聪颖仁慈，淡泊名利，逆来顺受  | 易流于庸碌，缺乏进取，反为迟钝消极 |  
+> |  **偏印**  | 精明干练，反应机敏，多才多艺  | 易流于孤独，缺乏人情，反为自私冷漠 |  
+> |  **比肩**  | 稳健刚毅，勇敢冒险，积极进取  | 易流于孤僻，缺乏合群，反为孤立寡合 |  
+> |  **劫财**  | 热诚坦直，坚韧志旺，奋斗不屈  | 易流于盲目，缺乏理智，反为蛮横冲动 |  
+> |  **食神**  | 温文随和，带人宽厚，善良体贴  | 易流于虚伪，缺乏是非，反为迂腐懦弱 |  
+> |  **伤官**  | 聪明活跃，才华横溢，逞强好胜  | 易流于任性，缺乏约束，反为桀骜不驯 |  
+> |  **正财**  | 勤劳节俭，踏实保守，任劳任怨  | 易流于苟且，缺乏进取，反为懦弱无能 |  
+> |  **偏财**  | 慷慨重情，聪明机灵，乐观开朗  | 易流于虚浮，缺乏节制，反为浮华风流 |  
+> 
 
 # 方法
 ## 1. 八字推算
