--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -34,7 +34,7 @@
 | 冬       | 水     |  木 |  火 | 土 | 金 |
 | 月       | 土     |  金 |  水 | 木 | 火 |
 
-## 3. 十二长生
+## 3. [十二长生](https://www.guoyi360.com/bzjc/12cs/5953.html)
 | **日干** | **长生** | **沐浴** | **冠帶** | **临官** | **帝旺** | **衰** | **病** | **死** | **墓** | **绝** | **胎** | **养** |
 | --- | -------- | -------- | -------- | -------- | -------- | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
 | `甲` | **亥** | 子 | **丑** | **寅** | **卯** | 辰 | 巳 | 午 | 未 | 申 | **酉** | **戌** |
@@ -90,7 +90,6 @@
 > 
 
 - **性格**
->  
 > |          |        正        |         反         |
 > |:--------:|:---------------:|:-----------------:|  
 > |  **正官**  | 正直负责，端庄严肃，循规蹈矩  | 易流于刻板，墨守成规，反为意志不坚 |  
@@ -104,6 +103,28 @@
 > |  **正财**  | 勤劳节俭，踏实保守，任劳任怨  | 易流于苟且，缺乏进取，反为懦弱无能 |  
 > |  **偏财**  | 慷慨重情，聪明机灵，乐观开朗  | 易流于虚浮，缺乏节制，反为浮华风流 |  
 > 
+
+## [六甲空亡表]
+
+
+## [六十甲子纳音表](https://www.nongli.cn/nongli/61371.html)
+> 甲子、乙丑——海中金，丙寅、丁卯——炉中火。  
+> 戊辰、己巳——大林木，庚午、辛未——路旁土。  
+> 壬申、癸酉——剑锋金，甲戌、乙亥——山头火。  
+> 丙子、丁丑——涧下水，戊寅、己卯——城头土。  
+> 庚辰、辛巳——白蜡金，壬午、癸未——杨柳木。  
+> 甲申、乙酉——泉中水，丙戌、丁亥——屋上土。  
+> 戊子、己丑——霹雳火，庚寅、辛卯——松柏木。  
+> 壬辰、癸巳——长流水，甲午、乙未——沙中金。  
+> 丙申、丁酉——山下火，戊戌、己亥——平地木。  
+> 庚子、辛丑——壁上土，壬寅、癸卯——金箔金。  
+> 甲辰、乙巳——覆灯火，丙午、丁未——天河水。  
+> 戊申、己酉——大驿土，庚戌、辛亥——钗钏金。  
+> 壬子、癸丑——桑柘木，甲寅、乙卯——大溪水。  
+> 丙辰、丁巳——沙中土，戊午、己未——天上火。  
+> 庚申、辛酉——石榴木，壬戌、癸亥——大海水。
+
+## 取格
 
 # 方法
 ## 1. 八字推算
