--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -35,7 +35,7 @@
 | 月       | 土     |  金 |  水 | 木 | 火 |
 
 ## 3. [十二长生](https://www.guoyi360.com/bzjc/12cs/5953.html)
-| **日干** | **长生** | **沐浴** | **冠帶** | **临官** | **帝旺** | **衰** | **病** | **死** | **墓** | **绝** | **胎** | **养** |
+| **日干** | **长生** | 沐浴 | **冠帶** | **临官** | **帝旺** | 衰 | 病 | 死 | 墓 | 绝 | **胎** | **养** |
 | --- | -------- | -------- | -------- | -------- | -------- | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
 | `甲` | **亥** | 子 | **丑** | **寅** | **卯** | 辰 | 巳 | 午 | 未 | 申 | **酉** | **戌** |
 | `乙` | **午** | 巳 | **辰** | **卯** | **寅** | 丑 | 子 | 亥 | 戌 | 酉 | **申** | **未** |
@@ -104,10 +104,18 @@
 > |  **偏财**  | 慷慨重情，聪明机灵，乐观开朗  | 易流于虚浮，缺乏节制，反为浮华风流 |  
 > 
 
-## [六甲空亡表]
+## 6. [六甲空亡表](https://www.bmfsm.com/shengchenbazisuanming/liushijiazi/93570.html)
+| 干 位 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 空亡 |
+|------|------|------|------|------|------|------|------|------|------|------|------|
+| 第1旬 | 甲子 | 乙丑 | 丙寅 | 丁卯 | 戊辰 | 己巳 | 庚午 | 辛未 | 壬申 | 癸酉 | 戌亥 |
+| 第2旬 | 甲戌 | 乙亥 | 丙子 | 丁丑 | 戊寅 | 己卯 | 庚辰 | 辛巳 | 壬午 | 癸未 | 申酉 |
+| 第3旬 | 甲申 | 乙酉 | 丙戌 | 丁亥 | 戊子 | 己丑 | 庚寅 | 辛卯 | 壬辰 | 癸巳 | 午未 |
+| 第4旬 | 甲午 | 乙未 | 丙申 | 丁酉 | 戊戌 | 己亥 | 庚子 | 辛丑 | 壬寅 | 癸卯 | 辰巳 |
+| 第5旬 | 甲辰 | 乙巳 | 丙午 | 丁未 | 戊申 | 己酉 | 庚戌 | 辛亥 | 壬子 | 癸丑 | 寅卯 |
+| 第6旬 | 甲寅 | 乙卯 | 丙辰 | 丁巳 | 戊午 | 己未 | 庚申 | 辛酉 | 壬戌 | 癸亥 | 子丑 |
 
 
-## [六十甲子纳音表](https://www.nongli.cn/nongli/61371.html)
+## 7. [六十甲子纳音表](https://www.nongli.cn/nongli/61371.html)
 > 甲子、乙丑——海中金，丙寅、丁卯——炉中火。  
 > 戊辰、己巳——大林木，庚午、辛未——路旁土。  
 > 壬申、癸酉——剑锋金，甲戌、乙亥——山头火。  
@@ -123,8 +131,6 @@
 > 壬子、癸丑——桑柘木，甲寅、乙卯——大溪水。  
 > 丙辰、丁巳——沙中土，戊午、己未——天上火。  
 > 庚申、辛酉——石榴木，壬戌、癸亥——大海水。
-
-## 取格
 
 # 方法
 ## 1. 八字推算
