更新 易经基础.md

--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -57,7 +57,7 @@
 |:------:|:------------|:------------|:----------------|
 | **地支** | **辰 未 戌 丑** | **寅 巳 申 亥** | **子 卯 午 酉**     |
 |  `本气`  | 戊 己 戊 己     | 甲 丙 庚 壬     | 癸 乙 丁 辛         |
-|  `中气`  | 己 丁 辛 癸     | 丙 庚 壬 甲     | &emsp;&emsp;&emsp;己 |
+|  `中气`  | 己 丁 辛 癸     | 丙 庚 壬 甲     | &emsp;&emsp;&ensp;己 |
 |  `余气`  | 癸 乙 丁 辛     | 戊 戊 戊       |                 |
 > `子`中单**癸**水，`丑`藏**己癸辛**。  
 > `寅`中**甲丙戊**，`卯`中**乙**木藏。  
