--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -132,6 +132,42 @@
 > 丙辰、丁巳——沙中土，戊午、己未——天上火。  
 > 庚申、辛酉——石榴木，壬戌、癸亥——大海水。
 
+## 8. 五行结构系统表
+
+|          |          |          | 自然界   |          |          |          | 五行   |          |          |          | 人体     |          |          |          |
+| -------- | -------- | -------- | -------- | -------- | -------- | -------- | ------ | -------- | -------- | -------- | -------- | -------- | -------- | -------- |
+| **五音** | **五味** | **五色** | **五化** | **五气** | **五方** | **五季** |        | **五脏** | **五腑** | **五官** | **五体** | **五志** | **五液** | **五脉** |
+| 角       | 酸       | 青       | 生       | 风       | 东       | 春       | **木** | 肝       | 胆       | 目       | 筋       | 怒       | 泪       | 弦       |
+| 徵       | 甜       | 赤       | 长       | 暑       | 南       | 夏       | **火** | 心       | 小肠     | 舌       | 脉       | 喜       | 汗       | 洪       |
+| 宫       | 甘       | 黄       | 化       | 湿       | 中       | 长夏     | **土** | 脾       | 胃       | 口       | 肉       | 思       | 涎       | 缓       |
+| 商       | 辛       | 白       | 收       | 燥       | 西       | 秋       | **金** | 肺       | 大肠     | 鼻       | 皮       | 悲       | 涕       | 浮       |
+| 羽       | 咸       | 黑       | 藏       | 寒       | 北       | 冬       | **水** | 肾       | 膀胱     | 耳       | 骨       | 恐       | 唾       | 沉       |
+
+## 9. 月建
+
+| 地支 | 月份   | 节气        | 五行 | 时辰    | 属相 | 方位   | 阴阳 |
+| ---- | ------ | ----------- | ---- | ------- | ---- | ------ | ---- |
+| 寅   | 正月   | [立春-惊蛰] | 木   | [3-5]   | 虎   | 东北东 | 阳支 |
+| 卯   | 二月   | [惊蛰-清明] | 木   | [5-7]   | 兔   | 正东   | 阴支 |
+| 辰   | 三月   | [清明-立夏] | 土   | [7-9]   | 龙   | 东南东 | 阳支 |
+| 巳   | 四月   | [立夏-芒种] | 火   | [9-11]  | 蛇   | 东南南 | 阴支 |
+| 午   | 五月   | [芒种-小暑] | 火   | [11-13] | 马   | 正南   | 阳支 |
+| 未   | 六月   | [小暑-立秋] | 土   | [13-15] | 羊   | 西南南 | 阴支 |
+| 申   | 七月   | [立秋-白露] | 金   | [15-17] | 猴   | 东南西 | 阳支 |
+| 酉   | 八月   | [白露-寒露] | 金   | [17-19] | 鸡   | 正西   | 阴支 |
+| 戌   | 九月   | [寒露-立冬] | 土   | [19-21] | 狗   | 西北西 | 阳支 |
+| 亥   | 十月   | [立冬-大雪] | 水   | [21-23] | 猪   | 西北北 | 阴支 |
+| 子   | 十一月 | [大雪-小寒] | 水   | [23-1]  | 鼠   | 正北   | 阳支 |
+| 丑   | 十二月 | [小寒-立春] | 土   | [1-3]   | 牛   | 东北北 | 阴支 |
+
+| **巳月**  **四月**<br/>[立夏-芒种]   火<br/>[9-11]   蛇<br/>东南南   阴支 | **午月**  **五月**<br/>[芒种-小暑]   火<br/>[11-13]   马<br/>正南   阳支 | **未月**  **六月<br/>**[小暑-立秋]   土<br/>[13-15]   羊<br/>西南南   阴支 | **申月**  **七月**<br/>[立秋-白露]   金<br/>[15-17]   猴<br/>东南西   阳支 |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| **辰月**  **三月**<br/>[清明-立夏]   土<br/>[7-9]   龙<br/>东南东   阳支 |                                                              |                                                              | **酉月**  **八月**<br/>[白露-寒露]   金<br/>[17-19]   鸡<br/>正西   阴支 |
+| **卯月**  **二月**<br/>[惊蛰-清明]   木<br/>[5-7]   兔<br/>正东   阴支 |                                                              |                                                              | **戌月**  **九月**<br/>[寒露-立冬]   土<br/>[19-21]   狗<br/>西北西   阳支 |
+| **寅月**  **正月**<br/>[立春-惊蛰]   木<br/>[3-5]   虎<br/>东北东   阳支 | **丑月**  **十二月**<br/>[小寒-立春]   土<br/>[1-3]   牛<br/>东北北   阴支 | **子月**  **十一月**<br/>[大雪-小寒]   水<br/>[23-1]   鼠<br/>正北   阳支 | **亥月**  **十月**<br/>[立冬-大雪]   水<br/>[21-23]   猪<br/>西北北   阴支 |
+
+
+
 # 方法
 ## 1. 八字推算
 > **年干支**：
@@ -159,4 +195,3 @@
 >> 丁壬庚子居。  
 >> 戊癸何方发，  
 >> 壬子是真途。
->
