--- a/contents/天干地支关系.md
+++ b/contents/天干地支关系.md
@@ -1,7 +1,7 @@
 # 干支关系概览表
 ![干支生克.png](..%2Fpictures%2F%E5%B9%B2%E6%94%AF%E7%94%9F%E5%85%8B.png)
 
-# 地支相克（对角）
+# 地支相冲（对角）
 | **巳**  |  **午**  |  **未**  |  **申**  |
 |:------:|:-------:|:-------:|:-------:|
 | **辰**  |         |         |  **酉**  |
