--- a/contents/天干地支关系.md
+++ b/contents/天干地支关系.md
@@ -1,6 +1,9 @@
 # 干支关系概览表
 ![干支生克.png](..%2Fpictures%2F%E5%B9%B2%E6%94%AF%E7%94%9F%E5%85%8B.png)
 
+# 干支作用关系优先级
+> **合> 生> 克> 冲> 刑> 害> 破**
+
 # 地支相冲（对角）
 | **巳**  |  **午**  |  **未**  |  **申**  |
 |:------:|:-------:|:-------:|:-------:|
