--- a/contents/子平学习路线.MD
+++ b/contents/子平学习路线.MD
@@ -1,1 +1,16 @@
+# 1.子平真诠 入门（看3遍）
+（1-30节 基础）
+（31-46）取格用神
+（47）论杂格
 
+# 2.穷通宝鉴（通透天干）
+
+# 3.三命通会（方成竹2019版）
+卷1（除纳音）
+卷2,3,4
+卷5（加深了解）
+卷6（了解，认真学习，选读）
+卷7（突破最高深，论女命）
+卷10
+
+# 4.渊海子平（所有都要懂）跟前边汇合
