--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -166,7 +166,18 @@
 | **卯月**  **二月**<br/>[惊蛰-清明]   木<br/>[5-7]   兔<br/>正东   阴支 |                                                              |                                                              | **戌月**  **九月**<br/>[寒露-立冬]   土<br/>[19-21]   狗<br/>西北西   阳支 |
 | **寅月**  **正月**<br/>[立春-惊蛰]   木<br/>[3-5]   虎<br/>东北东   阳支 | **丑月**  **十二月**<br/>[小寒-立春]   土<br/>[1-3]   牛<br/>东北北   阴支 | **子月**  **十一月**<br/>[大雪-小寒]   水<br/>[23-1]   鼠<br/>正北   阳支 | **亥月**  **十月**<br/>[立冬-大雪]   水<br/>[21-23]   猪<br/>西北北   阴支 |
 
+## 10.羊刃
+> 阳干的劫财位
+| 阳干 | 甲 | 丙 | 戊 | 庚 | 壬 |
+|-----|----|----|----|----|----|                     
+| 羊刃 | 卯 | 午 | 午 | 酉 | 子 |
 
+## 11.禄
+> 天干对应同属性阳支
+| 天干 | 甲 | 乙 | 丙 | 丁 | 戊 | 己 | 庚 | 辛 | 壬 | 癸 |
+|-----|----|----|----|----|----|----|----|----|----|----|                         
+| 禄位 | 寅 | 卯 | 巳 | 午 | 巳 | 午 | 申 | 酉 | 亥 | 子 |
+| 半禄 |    |    | 午 | 巳 | 午 | 巳 |    |    | 子 | 亥 |
 
 # 方法
 ## 1. 八字推算
