--- a/contents/易经基础.md
+++ b/contents/易经基础.md
@@ -185,28 +185,28 @@
 
 # 方法
 ## 1. 八字推算
-> **年干支**：
->> 乾坤掌中有，  
->> 1960子为首。  
->> 逆隔一加十，  
->> 顺逢四甲始。  
-> 
-> **月天干**：
->> [**五虎遁元**]()  
->> 甲己之年丙作首,  
->> 乙庚之岁戊为头,  
->> 丙辛必定寻庚起,  
->> 丁壬壬位顺行流,  
->> 若问戊癸何方发,  
->> 甲寅之上好追求。  
-> 
-> **日干支**:
->> <font color="red">时柱干支推算比较复杂, 暂无</font>
-> 
-> **时干支**:
->> 甲乙还加甲，  
->> 乙庚丙作初。  
->> 丙辛从戊起，  
->> 丁壬庚子居。  
->> 戊癸何方发，  
->> 壬子是真途。
+**年干支**：
+> 乾坤掌中有，  
+> 1960子为首。  
+> 逆隔一加十，  
+> 顺逢四甲始。  
+ 
+**月天干**：
+> [**五虎遁元**]()  
+> 甲己之年丙作首,  
+> 乙庚之岁戊为头,  
+> 丙辛必定寻庚起,  
+> 丁壬壬位顺行流,  
+> 若问戊癸何方发,  
+> 甲寅之上好追求。  
+
+**日干支**:
+> <font color="red">时柱干支推算比较复杂, 暂无</font>
+ 
+**时干支**:
+> 甲乙还加甲，  
+> 乙庚丙作初。  
+> 丙辛从戊起，  
+> 丁壬庚子居。  
+> 戊癸何方发，  
+> 壬子是真途。
