Update and rename 易经基础.md to 命理基础.md
驿马

--- a/contents/命理基础.md
+++ b/contents/命理基础.md
@@ -183,6 +183,15 @@
 | 禄位 | 寅 | 卯 | 巳 | 午 | 巳 | 午 | 申 | 酉 | 亥 | 子 |
 | 半禄 |    |    | 午 | 巳 | 午 | 巳 |    |    | 子 | 亥 |
 
+## 12.马星（驿马）
+> 三合局首支对冲的地支
+>
+
+`寅 午 戊` 在 **申**
+`亥 卯 未` 在 **巳**
+`巳 酉 丑` 在 **亥**
+`申 子 辰` 在 **寅**
+
 # 方法
 ## 1. 八字推算
 **年干支**：
